<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Freegan Quest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scavPlayText">Scavenger Player </string>
    <string name="startName">Start</string>
    <string name="resultsName"> Results</string>
    <string name="action_manage"> Manager Mode </string>
    <string name="action_user"> User Info </string>
    <string name="huntName">Hunt</string>
    <string name="addHunt">Add Hunt</string>
    <string name="statement">Add Quest</string>
    <string name="LoginTitle">User Login</string>
    <string name="CreateTitle">Create A User Account</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="default_message">Default Message</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="addItem">Add Item</string>
    <string name="name">Item:</string>
    <string name="location">Location:</string>
    <string name="locationHint">e.g. Park</string>
    <string name="description">Description</string>
    <string name="descriptionHint">Description Hint</string>
    <string name="submit">Submit</string>
    <string name="manMode">Manager</string>
    <string name="menu_show_loc">Show Locations</string>
    <string name="itemName">Name:</string>
    <string name="radWord">Words</string>
    <string name="radPics">Pictures</string>
    <string name="timeDisp">00:00:00</string>
    <string name="finishName">Finish</string>
    <string name="word">Answer.</string>
    <string name="capture">Capture</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="aboutName">About</string>
    <string name="helpName">Help</string>
    <string name="dialog_ok">OK</string>
    <string name="title_activity_image_pick">ImagePickActivity</string>
    <string name="addPicture">Add Picture</string>
    <string name="usersText">User Name: </string>
    <string name="passText">Password: </string>
    <string name="loginText">Login</string>
	<string name="uName">Name: </string>
	<string name="createText">Create</string>
	<string name="confirmPass">Confirm Password: </string>
	<string name="forgetText">Forget password?</string>
	<string name ="logoutText">Logout</string>
	<string name="dialog_yes">Yes</string>
	<string name="dialog_no">No</string>
	<string name="confirm_message">Are you Sure?</string>
	<string name="email">Email:</string>
	<string name="send">Send Hunts</string>
</resources>