<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:ignore="NewApi" >

    <LinearLayout
        android:id="@+id/huntLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="True" >

        <TextView
            android:id="@+id/huntNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/huntName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/huntName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text=""
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/huntLayout">

        <TextView
            android:id="@+id/itemNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/itemNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemLayout" >

        <TextView
            android:id="@+id/locationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/locationInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/locationHint" />
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLayout"
        android:layout_gravity="left"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@id/descriptionText"
        android:layout_gravity="left"
        android:ems="10"
        android:hint="@string/descriptionHint" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionInput"
        android:layout_centerHorizontal="true"
        android:onClick="submit"
        android:text="@string/submit" />

</RelativeLayout>