<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5efff" >

    <TextView
        android:id="@+id/huntName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huntName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="34dp"
        android:onClick="addItemToList"
        android:text="@string/addItem" />

    <TextView
        android:id="@+id/itemMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/huntName"
        android:layout_marginLeft="15dp"
        android:text="@string/itemName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemMain" >

    </ListView>

</RelativeLayout>