<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#feecec" >

    <TextView
        android:id="@+id/huntMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huntName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <FrameLayout
            android:id="@+id/fragment_titles" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:layout_below="@+id/huntMain"
            android:layout_marginTop="45dp"
            android:background="#feecec"
             >

   </FrameLayout>

   <Button
       android:id="@+id/addItemButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_alignParentRight="true"
       android:layout_marginRight="26dp"
       android:onClick="addItemToList"
       android:text="@string/addItem" />

   <Button
       android:id="@+id/addHunt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_marginRight="24dp"
       android:layout_toRightOf="@+id/huntMain"
       android:layout_marginLeft="25dp"
       android:onClick="onDialog"
       android:text="@string/addHunt" />

</RelativeLayout>